src/pj/poco/test/neg/NPARMCT2.POC
/* Test that parameters are counted correctly with an extra comma */
#pragma poco echo "expect>not enough parameters in call to function 'mul'"

int mul(int i, int j)
{
return i*j;
}

main()
{
mul(1,);
puts("I shouldn't have compiled!");
}
